# paraxial

./: LICENSE  README.md  pyproject.toml
src/paraxial/: __about__.py  __init__.py  equations.py  materials.py  sources.py  surfaces.py
tests/: test_abcd_matrix.py  test_composite_surfaces.py  test_equations.py  test_gaussian_beam.py  test_materials.py  test_numpy_sympy_integration.py  test_ray.py  test_surfaces.py
